--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/print.css' | relative_url }}" media="print">
 
     <!-- FAVICONS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/favicons/apple-touch-icon.png' }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicons/favicon-32x32.png' }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicons/favicon-16x16.png' }}">
-    <link rel="manifest" href="{{ '/favicons/site.webmanifest' }}">
-    <link rel="mask-icon" href="{{ '/favicons/safari-pinned-tab.svg' }}" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/favicons/apple-touch-icon.png?v=algQKYxMNL' }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicons/favicon-32x32.png?v=algQKYxMNL' }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicons/favicon-16x16.png?v=algQKYxMNL' }}">
+    <link rel="manifest" href="{{ '/favicons/site.webmanifest?v=algQKYxMNL' }}">
+    <link rel="mask-icon" href="{{ '/favicons/safari-pinned-tab.svg?v=algQKYxMNL' }}" color="#ff9f1c">
+    <link rel="shortcut icon" href="{{ '/favicons/favicon.ico?v=algQKYxMNL' }}">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
